--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
 
                 </div>
             </section>
+
+            <div class="warnig">
+                <div>
+                    <i class="ph ph-warning-circle ph-fill"></i>
+                    <span>O item foi removido da lista</span>
+                </div>
+
+                <button>
+                    <i class="ph ph-x"></i>
+                </button>
+
+            </div>
         </main>
 </body> 
 </html>
