--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -36,6 +37,7 @@
             <input type="text" placeholder="Adicione um novo item" id="item">
             <button onclick="addItem()">Adicionar item</button>
         </section>
+
         <section class="list"></section>
 
         <div class="warning hide-warning">
@@ -44,10 +46,11 @@
                 <span>O item foi removido da lista</span>
             </div>
 
-            <button>
+            <button onclick="addHideWarningClass()">
                 <i class="ph ph-x"></i>
             </button>
         </div>
     </main>
+</body>
 
 </html>
