Correção de erros

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header>
-        <img src="./assets/logo.png" alt="logo quicklist">
+       <img src="./assets-20250529T194619Z-1-001/assets/logo.png" alt="logo quicklist">
 
         <button>
             <i class="ph ph-arrow-left"></i>
@@ -53,3 +53,4 @@
 </body>
 
 </html>
+
